--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -75,7 +75,21 @@
         <img src="./img/title-logo-gullcast.svg" alt="GULLCAST">
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Windsurfing race navigation system</p>
+
+		<div>Comming soon...
+		  <ul>
+			<li  style="display: inline-block;">
+			  <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" alt="準備中"  height="60" style="margin:15px 15px;" />
+			</li>
+			<li  style="display: inline-block;">
+			  <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" alt="準備中" width="230" />
+			</li>
+		  </ul>
+		</div>
+		<br>
+
         <a class="wslab-link" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【氏名】%0D%0A【国籍】%0D%0A【カテゴリ】%0D%0A　購入希望/協業/メディア/その他 %0D%0A %0D%0A【お問い合わせ内容】">お問い合わせ</a>
+
       </div>
       <div class="wslab-top-attention">
         <p>現在、一部ユーザーと共にトライアルを実施しています。 <br>詳しい製品情報をご希望の方は、ページ下部のアドレスからお問い合わせください
@@ -85,6 +99,15 @@
         </a>
       </div>
     </section>
+
+    <section class="wslab-section wslab-partner">
+      <div>
+        <h5 class="wslab-section-label">おしらせ</h5>
+        <p>● 2018/4/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
+      </div>
+    </section>
+
+
     <section class="wslab-section wslab-product">
       <div>
         <h5 class="wslab-section-label wslab-impressions">GULLCASTは、ウィンドサーフィンの魅力と楽しさをわかりやすく伝えるための大会運営ソリューションです。
@@ -187,7 +210,7 @@
     </section>
     <section class="wslab-section wslab-partner">
       <div>
-        <h5 class="wslab-section-label">CREWINGを支持してくれているユーザー/パートナー</h5>
+        <h5 class="wslab-section-label">GULLCASTを支持してくれているユーザー/パートナー</h5>
         <ul class="wslab-partner-list">
           <li class="wslab-jwa">
             <img src="./img/logo-jwa.png" alt="Japan Windsurging Association">
