add button for app download

--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -65,6 +65,19 @@
         <img src="../img/title-logo-gullcast.svg" alt="GULLCAST">
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Windsurfing race navigation system </p>
+
+        <div>Comming soon...
+          <ul>
+          <li  style="display: inline-block;">
+            <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg" alt="準備中"  height="60" style="margin:15px 15px;" />
+          </li>
+          <li  style="display: inline-block;">
+            <img src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" alt="準備中" width="230" />
+          </li>
+          </ul>
+        </div>
+        <br>
+    
         <a class="wslab-link" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【Name】%0D%0A【Country】%0D%0A【Category】%0D%0A　Purchase/Collaboration/Mass
     Media/Other %0D%0A %0D%0A【Detail】">CONTACT</a>
       </div>
@@ -77,6 +90,14 @@
         </a>
       </div>
     </section>
+
+    <section class="wslab-section wslab-partner">
+      <div>
+        <h5 class="wslab-section-label">Information</h5>
+        <p>● 25/4/2018 - Download site for GULLCAST watching application is in preparation</p>
+      </div>
+    </section>
+
     <section class="wslab-section wslab-product">
       <div>
         <h5 class="wslab-section-label wslab-impressions">GULLCAST is a solution everyone can enjoy watching races more easy-to-understand.
@@ -86,7 +107,7 @@
     <section class="wslab-section wslab-about">
       <div class="wslab-flex-box">
         <div class="wslab-flex-box-middle">
-          <h5 class="wslab-section-label">Create a "watching experience " that anyone can enjoy</h5>
+          <h5 class="wslab-section-label">Create a "watching experience" that anyone can enjoy</h5>
           <p>
             GULLCAST delivers immersive experience (3D) to audiences in real time. The audience will be able to enjoy windsurfing even
             when taking place at a faraway sea.
