--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -66,13 +66,17 @@
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Windsurfing race navigation system </p>
 
-        <div>Comming soon...
+        <div>
           <ul>
-          <li  style="display: inline-block;">
-            <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg" alt="準備中"  height="60" style="margin:15px 15px;" />
+          <li  style="display: inline-block; text-align:left;">
+            <a href="https://itunes.apple.com/us/app/gullcast/id1377975394">
+            <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg"  height="60" style="margin:15px 15px;" />
+            </a>
           </li>
           <li  style="display: inline-block;">
-            <img src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" alt="準備中" width="230" />
+            <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+            <img src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="230" />
+            </a>
           </li>
           </ul>
         </div>
@@ -94,10 +98,12 @@
     <section class="wslab-section wslab-partner">
       <div>
         <h5 class="wslab-section-label">Information</h5>
-        <p>● 25/4/2018 - Download site for GULLCAST watching application is in preparation</p>
+        <div style="text-align:left;"/>
+        <p>● 10/5/2018 - GULLCAST For ANA Windsurfing World Cup version was released!</p>
+        <p>● 25/4/2018 - Download site for GULLCAST watching application is in preparation.</p>
+        </div>
       </div>
     </section>
-
     <section class="wslab-section wslab-product">
       <div>
         <h5 class="wslab-section-label wslab-impressions">GULLCAST is a solution everyone can enjoy watching races more easy-to-understand.
