--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -76,13 +76,17 @@
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Windsurfing race navigation system</p>
 
-		<div>Comming soon...
+		<div>
 		  <ul>
 			<li  style="display: inline-block;">
-			  <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" alt="準備中"  height="60" style="margin:15px 15px;" />
+			  <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
+			  <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" height="60" style="margin:15px 15px;" />
+			  </a>
 			</li>
 			<li  style="display: inline-block;">
-			  <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" alt="準備中" width="230" />
+			  <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+			  <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" width="230" />
+			  </a>
 			</li>
 		  </ul>
 		</div>
@@ -103,7 +107,10 @@
     <section class="wslab-section wslab-partner">
       <div>
         <h5 class="wslab-section-label">おしらせ</h5>
+        <div style="text-align: left;">
+        <p>● 2018/5/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
         <p>● 2018/4/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
+        </div>
       </div>
     </section>
 
