--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -69,14 +69,15 @@
       <img src="./img/icon-humburger.svg" alt="メニュー">
     </a>
   </header>
-  <div class="wslab-main-area">
+  
+    <div class="wslab-main-area">
     <section class="wslab-title-top">
       <div class="wslab-title-top-inner">
         <img src="./img/title-logo-gullcast.svg" alt="GULLCAST">
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Windsurfing race navigation system</p>
 
-		<div>
+		<!--div>
 		  <ul>
 			<li  style="display: inline-block;">
 			  <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
@@ -89,7 +90,7 @@
 			  </a>
 			</li>
 		  </ul>
-		</div>
+		</div-->
 		<br>
 
         <a class="wslab-link" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【氏名】%0D%0A【国籍】%0D%0A【カテゴリ】%0D%0A　購入希望/協業/メディア/その他 %0D%0A %0D%0A【お問い合わせ内容】">お問い合わせ</a>
@@ -104,15 +105,20 @@
       </div>
     </section>
 
+
+
     <section class="wslab-section wslab-partner">
       <div>
         <h5 class="wslab-section-label">おしらせ</h5>
         <div style="text-align: left;">
+        <p>● 2018/6/19 - 6/21-22 SUP荒川ダウンリバーをサポート中!</p>
         <p>● 2018/5/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
         <p>● 2018/4/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
         </div>
       </div>
     </section>
+
+<iframe src="https://gullcast.herokuapp.com/organizations/6/show_map"  width="100%" height="560" name="map">MAP</iframe>
 
 
     <section class="wslab-section wslab-product">
