--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -64,9 +64,10 @@
       <div class="wslab-title-top-inner">
         <img src="../img/title-logo-gullcast.svg" alt="GULLCAST">
         <h3 class="wslab-title">GULLCAST</h3>
-        <p class="wslab-sub-title">Windsurfing race navigation system </p>
+        <p class="wslab-sub-title">Watersports navigation system </p>
 
         <div>
+          ANA Windsurfing World Cup Navigation App DL
           <ul>
           <li  style="display: inline-block; text-align:left;">
             <a href="https://itunes.apple.com/us/app/gullcast/id1377975394">
@@ -115,7 +116,7 @@
         <div class="wslab-flex-box-middle">
           <h5 class="wslab-section-label">Create a "watching experience" that anyone can enjoy</h5>
           <p>
-            GULLCAST delivers immersive experience (3D) to audiences in real time. The audience will be able to enjoy windsurfing even
+            GULLCAST delivers immersive experience (3D) to audiences in real time. The audience will be able to enjoy watersports even
             when taking place at a faraway sea.
           </p>
           <div class="wslab-flex-image-wrapper">
@@ -125,7 +126,7 @@
         <div class="wslab-flex-box-middle">
           <h5 class="wslab-section-label">Use the data of athletes and spectators for management</h5>
           <p>
-            GULLCAST creates reports from all windsurfing data, such as surfer's data, wind direction, position, and spectator data.
+            GULLCAST creates reports from all watersports data, such as surfer's data, wind direction, position, and spectator data.
             The tournament is managed according to this data.
           </p>
           <div class="wslab-flex-image-wrapper">
@@ -187,7 +188,7 @@
           </div>
           <div class="wslab-flex-box-middle">
             <h5 class="wslab-section-label">GULLCAST management system</h5>
-            <p>GULLCAST supports every aspect for running windsurfing competitions. We provide an unprecedented tournament management
+            <p>GULLCAST supports every aspect for running watersports competitions. We provide an unprecedented tournament management
               system including record of competition/player data, 3D relay of race, marketing report of audience/players.</p>
           </div>
         </div>
@@ -236,7 +237,7 @@
             <h5 class="wslab-section-label"><span class="wslab-point-number">1</span>GULLCAST is full of content such as rules commentary, surfers' guidebooks
               and event information</h5>
             <p>GULLCAST offers wind surfing rules and surfers' books, so that even people who are watching for the first time
-              can enjoy windsurfing.</p>
+              can enjoy watersports.</p>
           </div>
         </div>
       </div>
@@ -275,7 +276,7 @@
     </section>
     <section class="wslab-section wslab-product">
       <div>
-        <h5 class="wslab-section-label wslab-impressions">GULLCAST brings windsurfing tournaments closer to people
+        <h5 class="wslab-section-label wslab-impressions">GULLCAST brings watersports tournaments closer to people
         </h5>
       </div>
     </section>
