--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -75,9 +75,10 @@
       <div class="wslab-title-top-inner">
         <img src="./img/title-logo-gullcast.svg" alt="GULLCAST">
         <h3 class="wslab-title">GULLCAST</h3>
-        <p class="wslab-sub-title">Windsurfing race navigation system</p>
+        <p class="wslab-sub-title">Watersports navigation system</p>
 
-		<!--div>
+		<div>
+		  ANA ウインサーフィンワールドカップ横須賀大会観戦アプリDL
 		  <ul>
 			<li  style="display: inline-block;">
 			  <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
@@ -90,14 +91,14 @@
 			  </a>
 			</li>
 		  </ul>
-		</div-->
+		</div>
 		<br>
 
         <a class="wslab-link" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【氏名】%0D%0A【国籍】%0D%0A【カテゴリ】%0D%0A　購入希望/協業/メディア/その他 %0D%0A %0D%0A【お問い合わせ内容】">お問い合わせ</a>
 
       </div>
       <div class="wslab-top-attention">
-        <p>現在、一部ユーザーと共にトライアルを実施しています。 <br>詳しい製品情報をご希望の方は、ページ下部のアドレスからお問い合わせください
+        <p><br>現在、一部ユーザーと共にトライアルを実施しています。 <br>詳しい製品情報をご希望の方は、ページ下部のアドレスからお問い合わせください
         </p>
         <a id="wslab-scroll-contact">
           <img src="./img/icon-arrow.svg" alt="お問い合わせへ移動">
@@ -123,7 +124,7 @@
 
     <section class="wslab-section wslab-product">
       <div>
-        <h5 class="wslab-section-label wslab-impressions">GULLCASTは、ウィンドサーフィンの魅力と楽しさをわかりやすく伝えるための大会運営ソリューションです。
+        <h5 class="wslab-section-label wslab-impressions">GULLCASTは、ウォータースポーツの魅力と楽しさをわかりやすく伝えるためのソリューションです。
         </h5>
       </div>
     </section>
@@ -132,7 +133,7 @@
         <div class="wslab-flex-box-middle">
           <h5 class="wslab-section-label">誰もが楽しめる観戦体験をつくれる</h5>
           <p>
-            GULLCASTは、臨場感のあるリアルタイム配信（3D）を観客に配信します。観客は遠く離れた海上で行われるウィンドサーフィンを楽しむことができるようになります。
+            GULLCASTは、臨場感のあるリアルタイム配信（3D）を観客に配信します。観客は遠く離れた海上で行われるウォータースポーツを楽しむことができるようになります。
           </p>
           <div class="wslab-flex-image-wrapper">
             <img src="./img/watching-image.svg" alt="観戦体験">
@@ -141,7 +142,7 @@
         <div class="wslab-flex-box-middle">
           <h5 class="wslab-section-label">選手・観戦者のデータを運営に活用できる</h5>
           <p>
-            GULLCASTは、選手のデータ、風向き、位置など、ウィンドサーフィンのあらゆるデータや観戦者データからレポートを作成します。データに基づく大会運営を進めることができます。
+            GULLCASTは、選手のデータ、風向き、位置など、競技中のあらゆるデータや観戦者データからレポートを作成します。データに基づく大会運営を進めることができます。
           </p>
           <div class="wslab-flex-image-wrapper">
             <img src="./img/dashboard-image.svg" alt="ダッシュボード">
@@ -154,11 +155,12 @@
         <ul class="wslab-sensor-list">
           <li>
             <div class="wslab-image-wrapper">
-              <img src="./img/gullcast-sail-sensor.png" alt="セイルセンサー">
+              <img src="./img/gullcast-sail-sensor.png" alt="メインセンサー">
             </div>
             <div>
-              <label class="wslab-sensor-label">セイルセンサー</label>
-              セイルセンサーは、あなたがお持ちのマストに取り付けることができます。選手がセイルを操作する時の角度をセンシングします。
+              <label class="wslab-sensor-label">メインセンサー</label>
+              高精度なGPSとモーションセンサーにより、位置情報や角度、加速度等のデータをセンシングします。
+              アタッチメントによりセールに取り付けることで、あなたがお持ちのマストに取り付けることができます。
             </div>
           </li>
           <li>
@@ -185,7 +187,7 @@
             </div>
             <div>
               <label class="wslab-sensor-label">中継用ドローン</label>
-              カメラを搭載したドローンでウィンドサーフィン選手を追跡し、臨場感のあるリアルタイムの映像を配信します。
+              カメラを搭載したドローンで海上の選手を追跡し、臨場感のあるリアルタイムの映像を配信します。
             </div>
           </li>
         </ul>
@@ -201,7 +203,7 @@
           </div>
           <div class="wslab-flex-box-middle">
             <h5 class="wslab-section-label">GULLCAST 大会運営用システム</h5>
-            <p>GULLCASTがウィンドサーフィン大会を運営するためのあらゆる局面をサポートします。大会・選手データの記録、レースの3D中継、観客・選手のマーケティングレポートなど、今までにない大会運営システムを提供します。</p>
+            <p>GULLCASTがウォータースポーツの大会を運営するためのあらゆる局面をサポートします。大会・選手データの記録、レースの3D中継、観客・選手のマーケティングレポートなど、今までにない大会運営システムを提供します。</p>
           </div>
         </div>
       </div>
@@ -211,7 +213,7 @@
         <div class="wslab-flex-box">
           <div class="wslab-flex-box-middle">
             <h5 class="wslab-section-label">GULLCAST 観客用アプリケーション</h5>
-            <p>GULLCASTは、選手や環境のデータをセンシングし、ウィンドサーフィンレースをリアルタイムの3D映像として配信します。観客は、レースの内容を簡単に把握することができ、自分の好きな選手を自由に観ることができます。</p>
+            <p>GULLCASTは、選手や環境のデータをセンシングし、レースをリアルタイムの3D映像として配信します。観客は、レースの内容を簡単に把握することができ、自分の好きな選手を自由に観ることができます。</p>
           </div>
           <div class="wslab-flex-box-image">
             <div class="wslab-flex-image-wrapper">
@@ -247,7 +249,7 @@
           <div>
             <div class="wslab-section-icon wslab-training"></div>
             <h5 class="wslab-section-label"><span class="wslab-point-number">1</span>GULLCASTはルール解説や選手図鑑、イベント情報などのコンテンツが満載</h5>
-            <p>GULLCASTは、ウィンドサーフィンのルールや、選手図鑑など、初めての人でもウィンドサーフィンを楽しめるコンテンツを提供しています。</p>
+            <p>GULLCASTは、競技ルールや、選手図鑑など、初めての人でもウォータースポーツを楽しめるコンテンツを提供しています。</p>
           </div>
         </div>
       </div>
@@ -284,7 +286,7 @@
     </section>
     <section class="wslab-section wslab-product">
       <div>
-        <h5 class="wslab-section-label wslab-impressions">GULLCASTは、ウィンドサーフィン大会をもっと身近なものに変えていきます
+        <h5 class="wslab-section-label wslab-impressions">GULLCASTは、ウォータースポーツをもっと身近なものに変えていきます
         </h5>
       </div>
     </section>
