--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -112,7 +112,7 @@
       <div>
         <h5 class="wslab-section-label">おしらせ</h5>
         <div style="text-align: left;">
-        <p>● 2018/6/19 - 6/21-22 SUP荒川ダウンリバーをサポート中!</p>
+        <p>● 2018/6/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート中!</p>
         <p>● 2018/5/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
         <p>● 2018/4/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
         </div>
@@ -160,7 +160,7 @@
             <div>
               <label class="wslab-sensor-label">メインセンサー</label>
               高精度なGPSとモーションセンサーにより、位置情報や角度、加速度等のデータをセンシングします。
-              アタッチメントによりセールに取り付けることで、あなたがお持ちのマストに取り付けることができます。
+              アタッチメントを取り付けることで、あなたがお持ちのマストなどに用意に取り付けることができます。
             </div>
           </li>
           <li>
@@ -288,6 +288,12 @@
       <div>
         <h5 class="wslab-section-label wslab-impressions">GULLCASTは、ウォータースポーツをもっと身近なものに変えていきます
         </h5>
+      </div>
+    </section>
+    <section class="wslab-section wslab-contact">
+      <div class="wslab-form-wrapper">
+        <h5 class="wslab-section-label">ご参考価格表</h5>
+        <a class="wslab-link wslab-wide" onClick="window.open('pdf/price.pdf')">カタログダウンロード</a>
       </div>
     </section>
     <section class="wslab-section wslab-contact">
