--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -119,8 +119,12 @@
       </div>
     </section>
 
-<iframe src="https://gullcast.herokuapp.com/organizations/6/show_map"  width="100%" height="560" name="map">MAP</iframe>
-
+    <section class="wslab-section wslab-about">
+    <div>
+      <h5 class="wslab-section-label"> [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバートラッキング</h5>
+      <iframe src="https://gullcast.herokuapp.com/organizations/6/show_map"  width="100%" height="560" name="map">MAP</iframe>
+    </div>
+    </section>
 
     <section class="wslab-section wslab-product">
       <div>
