--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -112,7 +112,7 @@
       <div>
         <h5 class="wslab-section-label">おしらせ</h5>
         <div style="text-align: left;">
-        <p>● 2018/6/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート中!</p>
+        <p>● 2018/6/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート!</p>
         <p>● 2018/5/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
         <p>● 2018/4/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
         </div>
@@ -122,9 +122,9 @@
     <section class="wslab-section wslab-about">
     <div>
       <h5 class="wslab-section-label"> [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバートラッキング</h5>
-      <iframe src="https://gullcast.herokuapp.com/organizations/6/show_map"  width="100%" height="560" name="map">MAP</iframe>
     </div>
     </section>
+      <iframe src="https://gullcast.herokuapp.com/organizations/6/show_map"  width="100%" height="560" name="map">MAP</iframe>
 
     <section class="wslab-section wslab-product">
       <div>
