--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -297,7 +297,7 @@
     <section class="wslab-section wslab-contact">
       <div class="wslab-form-wrapper">
         <h5 class="wslab-section-label">ご参考価格表</h5>
-        <a class="wslab-link wslab-wide" href="pdf/price.pdf" onlick="ga('send', 'pageview', 'pdf/price.pdf')">カタログダウンロード</a>
+        <a class="wslab-link wslab-wide" onClick="ga('send', 'pageview', 'pdf/price.pdf');window.open('pdf/price.pdf');">カタログダウンロード</a>
       </div>
     </section>
     <section class="wslab-section wslab-contact">
