--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -121,10 +121,11 @@
 
     <section class="wslab-section wslab-about">
     <div>
-      <h5 class="wslab-section-label"> [6/21-22] 15:00開始! 長瀞ー豊洲 荒川１２０km SUPダウンリバートラッキング</h5>
+      <h5 class="wslab-section-label"> SUPダウンリバートラッキング オートデモンストレーション<br>名前をクリックすると、速度がリアルタイムに表示されます。</br></h5>
     </div>
     </section>
-      <iframe src="https://gullcast.herokuapp.com/organizations/6/show_map"  width="100%" height="560" name="map">MAP</iframe>
+      
+      <iframe src="https://t80-sup.herokuapp.com/"  width="100%" height="560" name="map">MAP</iframe>
 
     <section class="wslab-section wslab-product">
       <div>
