--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -125,15 +125,20 @@
     </div>
     </section>
       
-      <iframe src="https://t80-sup.herokuapp.com/"  width="100%" height="560" name="map">MAP</iframe>
+      <iframe src="https://t80-sup.herokuapp.com/"  width="90%" height="560" name="map" align="center">MAP</iframe>
 
+    <section class="wslab-section wslab-about">
+    <div>
+      <h5 class="wslab-section-label"> GULLCAST 紹介ムービー</h5>
+    </div>
+    </section>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/iJimhrHh5vc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <section class="wslab-section wslab-about">
     <div>
       <h5 class="wslab-section-label"> スマートフォンアプリ　3D観戦ビューア</h5>
     </div>
     </section>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/iJimhrHh5vc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/CauMNPOyJbc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/CauMNPOyJbc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     <section class="wslab-section wslab-product">
       <div>
