--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -8,7 +8,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-  
+
     gtag('config', 'UA-87076416-3');
   </script>
 
@@ -69,7 +69,7 @@
       <img src="./img/icon-humburger.svg" alt="メニュー">
     </a>
   </header>
-  
+
     <div class="wslab-main-area">
     <section class="wslab-title-top">
       <div class="wslab-title-top-inner">
@@ -77,21 +77,6 @@
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Watersports navigation system</p>
 
-		<div>
-		  ANA ウインサーフィンワールドカップ横須賀大会観戦アプリDL
-		  <ul>
-			<li  style="display: inline-block;">
-			  <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
-			  <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" height="60" style="margin:15px 15px;" />
-			  </a>
-			</li>
-			<li  style="display: inline-block;">
-			  <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
-			  <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" width="230" />
-			  </a>
-			</li>
-		  </ul>
-		</div>
 		<br>
 
         <a class="wslab-link" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【氏名】%0D%0A【国籍】%0D%0A【カテゴリ】%0D%0A　購入希望/協業/メディア/その他 %0D%0A %0D%0A【お問い合わせ内容】">お問い合わせ</a>
@@ -124,7 +109,7 @@
       <h5 class="wslab-section-label"> SUPダウンリバートラッキング オートデモンストレーション<br>（名前をクリックすると、速度がリアルタイムに表示されます）</h5>
     </div>
     </section>
-      
+
       <iframe src="https://t80-sup.herokuapp.com/"  width="90%" height="560" name="map" align="center">MAP</iframe>
 
     <section class="wslab-section wslab-about">
@@ -308,13 +293,33 @@
         </h5>
       </div>
     </section>
-    <section class="wslab-section wslab-contact">
-      <div class="wslab-form-wrapper">
-        <h5 class="wslab-section-label">ご参考価格表</h5>
-        <a class="wslab-link wslab-wide" onClick="gtag('config','UA-87076416-3', {'page_path': '/pdf/price.pdf'});window.open('pdf/price.pdf');">カタログダウンロード</a>
-      </div>
-    </section>
-    <section class="wslab-section wslab-contact">
+
+      <section class="wslab-section app-dl">
+        <div>
+          <h5 class="wslab-section-label">ANA ウインサーフィンワールドカップ横須賀大会観戦アプリDL</h5>
+            <ul>
+              <li  style="display: inline-block;">
+              <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
+                <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" width="200" style="margin:15px 15px;" />
+              </a>
+              </li>
+              <li  style="display: inline-block;">
+                <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+                  <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" width="230"  />
+                </a>
+              </li>
+            </ul>
+        </div>
+      </section>
+
+      <section class="wslab-section wslab-contact">
+        <div class="wslab-form-wrapper">
+          <h5 class="wslab-section-label">ご参考価格表</h5>
+          <a class="wslab-link wslab-wide" onClick="gtag('config','UA-87076416-3', {'page_path': '/pdf/price.pdf'});window.open('pdf/price.pdf');">カタログダウンロード</a>
+        </div>
+      </section>
+
+        <section class="wslab-section wslab-contact">
       <div class="wslab-form-wrapper">
         <h5 class="wslab-section-label">購入や詳しい製品情報をご希望の方は、下記連絡先へお問い合わせください</h5>
         <a class="wslab-link wslab-wide" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【氏名】%0D%0A【国籍】%0D%0A【カテゴリ】%0D%0A　購入希望/協業/メディア/その他 %0D%0A %0D%0A【お問い合わせ内容】">fj-windsurfinglab@dl.jp.fujitsu.com</a>
