--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -66,23 +66,8 @@
         <h3 class="wslab-title">GULLCAST</h3>
         <p class="wslab-sub-title">Watersports navigation system </p>
 
-        <div>
-          ANA Windsurfing World Cup Navigation App DL
-          <ul>
-          <li  style="display: inline-block; text-align:left;">
-            <a href="https://itunes.apple.com/us/app/gullcast/id1377975394">
-            <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg"  height="60" style="margin:15px 15px;" />
-            </a>
-          </li>
-          <li  style="display: inline-block;">
-            <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
-            <img src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="230" />
-            </a>
-          </li>
-          </ul>
-        </div>
         <br>
-    
+
         <a class="wslab-link" href="mailto:fj-windsurfinglab@dl.jp.fujitsu.com?subject=WindsurfingLab_GULLCAST&body=【Name】%0D%0A【Country】%0D%0A【Category】%0D%0A　Purchase/Collaboration/Mass
     Media/Other %0D%0A %0D%0A【Detail】">CONTACT</a>
       </div>
@@ -280,6 +265,25 @@
         </h5>
       </div>
     </section>
+
+    <section class="wslab-section app-dl">
+    <div>
+      <h5 class="wslab-section-label">ANA Windsurfing World Cup Navigation App DL</h5>
+      <ul>
+      <li  style="display: inline-block; text-align:left;">
+        <a href="https://itunes.apple.com/us/app/gullcast/id1377975394">
+        <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg" width="200" style="margin:15px 15px;" />
+        </a>
+      </li>
+      <li  style="display: inline-block;">
+        <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+        <img src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="230" />
+        </a>
+      </li>
+      </ul>
+    </div>
+    </section>
+
     <section class="wslab-section wslab-contact">
       <div class="wslab-form-wrapper">
         <h5 class="wslab-section-label">If you would like to make a purchase or get detailed product information, please contact us with the form below</h5>
