--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -96,33 +96,65 @@
   </header>
 
   <div class="wslab-main-area">
-    <section class="lazy slider">
-      <div class="slide_1">
-        <div style="width: 100%; text-align: center; color: rgb(30, 30, 255); font-size: 35px;">WindSurfing</div>
-        <img src="./img/img_01_wind-surfing.jpg">
-        <a href="https://www.youtube.com/embed/CauMNPOyJbc?rel=0" data-lity="data-lity">
-          <img class="movie1" src="./img/movie_01_windsurfing.gif" style="width:15%; height:15%;">
-        </a>
-      </div>
 
-      <div class="slide_2">
-        <div style="width: 100%; text-align: center; color: rgb(255, 30, 255); font-size: 35px;">SUP</div>
-        <img src="./img/img_02_sup.jpg">
+<!--
+    <section class="wslab-title-top">
+      <div class="wslab-title-top-inner">
+              <img src="./img/title-logo-gullcast.svg" alt="GULLCAST">
+              <h3 class="wslab-title">GULLCAST</h3>
+              <p class="wslab-sub-title">Watersports navigation system</p>
+      		<br>
+              <a class="wslab-link" href="#contact">お問い合わせ</a>
       </div>
+            <div class="wslab-top-attention">
+              <p><br>現在、一部ユーザーと共にトライアルを実施しています。 <br>詳しい製品情報をご希望の方は、ページ下部のアドレスからお問い合わせください
+              </p>
+              <a id="wslab-scroll-contact">
+                <img src="./img/icon-arrow.svg" alt="お問い合わせへ移動">
+              </a>
+            </div>
+          </section>
+        -->
 
-      <div class="slide_3">
-        <div style="width: 100%; text-align: center; color: rgb(255, 30, 30); font-size: 35px;">yacht</div>
-        <img src="./img/img_03_yoht.jpg">
-      </div>
+          <section class="wslab-title-top">
+          <div class="lazy slider">
+            <div class="slide_1">
+              <img src="./img/bg-gullcast.jpg">
+              <a href="https://www.youtube.com/embed/CauMNPOyJbc?rel=0" allowfullscreen data-lity="data-lity">
+                <img class="movie1" src="./img/movie_01_windsurfing.gif" style="width:20%; height:25%;">
+              </a>
+              <div class="wslab-title-top-inner">
+                <img src="./img/title-logo-gullcast.svg" alt="GULLCAST">
+              </div>
+              <div class="wslab-title-top-inner">
+                <h3 class="wslab-title">GULLCAST</h3>
+              </div>
+              <div class="wslab-title-top-inner">
+                <p class="wslab-sub-title">Watersports navigation system</p>
+                <a class="wslab-link" href="#contact">お問い合わせ</a>
+                <h5><br>現在、一部ユーザーと共にトライアルを実施しています。 <br>詳しい製品情報をご希望の方は、ページ下部のアドレスからお問い合わせください
+                </h5>
+              </div>
+              <div class="wslab-top-attention">
+              </div>
+            </div>
 
-    <div class="slide_4">
-      <div style="width: 100%; text-align: center; color: rgb(30, 255, 30); font-size: 35px;">drone</div>
-      <img src="./img/img_04_drone.jpg">
-      <a href="https://www.youtube.com/embed/l9PxbRrL5iQ?rel=0" data-lity="data-lity">
-        <img class="movie4" src="./img/movie_04_drone.gif" style="width:1.6%; height:13%;">
-      </a>
-    </div>
-  </section>
+            <div class="slide_2">
+              <img src="./img/img_02_sup.jpg">
+            </div>
+
+            <div class="slide_3">
+              <img src="./img/img_03_yoht.jpg">
+            </div>
+
+          <div class="slide_4">
+            <img src="./img/img_04_drone.jpg">
+            <a href="https://www.youtube.com/embed/l9PxbRrL5iQ?rel=0" data-lity="data-lity">
+              <img class="movie4" src="./img/movie_04_drone.gif" style="width:2%; height:18%;">
+            </a>
+          </div>
+        </div>
+      </section>
 
     <section class="wslab-section wslab-partner">
       <div>
@@ -354,7 +386,7 @@
 
       <section class="wslab-section wslab-about">
         <div class="wslab-section-label">
-          <h5>Contact</h5>
+          <h5 id="contact">Contact</h5>
           <h>購入や詳しい製品情報をご希望の方は、下記連絡先へお問い合わせください</h>
         <form action="https://docs.google.com/forms/d/e/1FAIpQLSchwv88MSyA5Oj8yzBX1nvjT5JxDqTZC8YEmQ7DgZEOLNu81g/formResponse" class="wslab-form">
           <ul>
