--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -110,7 +110,7 @@
     </div>
     </section>
 
-      <iframe src="https://t80-sup.herokuapp.com/"  width="90%" height="560" name="map" align="center">MAP</iframe>
+      <iframe src="https://t80-sup.herokuapp.com/map_only.html"  width="90%" height="560" name="map" align="center">MAP</iframe>
 
     <section class="wslab-section wslab-about">
     <div>
