--- a/wwwroot/downloads.html
+++ b/wwwroot/downloads.html
@@ -1,5 +1,5 @@
 <html>
-<a href="unity/AppforWindows.zip">ƒEƒCƒ“ƒhƒEƒY—pƒAƒvƒŠ‚Í‚±‚¿‚ç‚©‚ç</a>
+<a href="unity/AppforWindows.zip">ã‚¦ã‚¤ãƒ³ãƒ‰ã‚¦ã‚ºç”¨ã‚¢ãƒ—ãƒªã¯ã“ã¡ã‚‰ã‹ã‚‰</a>
 <br>
-<a href="unity/AppforMac.app.zip">Mac—pƒAƒvƒŠ‚Í‚±‚¿‚ç‚©‚ç</a>
+<a href="unity/AppforMac.app.zip">Macç”¨ã‚¢ãƒ—ãƒªã¯ã“ã¡ã‚‰ã‹ã‚‰</a>
 </html>
