--- a/wwwroot/downloads.html
+++ b/wwwroot/downloads.html
@@ -1,4 +1,18 @@
 <html>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-87076416-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-87076416-3');
+  </script>
+
+  <title>Windsurfing lab Download Site</title>
+</head>
+
 <a href="unity/AppforWindows.zip">ウインドウズ用アプリはこちらから</a>
 <br>
 <a href="unity/AppforMac.app.zip">Mac用アプリはこちらから</a>
