--- a/wwwroot/downloads.html
+++ b/wwwroot/downloads.html
@@ -13,7 +13,9 @@
   <title>Windsurfing lab Download Site</title>
 </head>
 
-<a href="unity/AppforWindows.zip">ウインドウズ用アプリはこちらから</a>
+<a href="unity/AppforWindows.zip">Yacht/ウインドウズ用アプリはこちらから</a>
 <br>
-<a href="unity/AppforMac.app.zip">Mac用アプリはこちらから</a>
+<a href="unity/AppforMac.app.zip">Yacht/Mac用アプリはこちらから</a>
+<br>
+<a href="unity/GULLCAST0215.app.zip">Windsurfing/Mac用アプリはこちらから</a>
 </html>
