--- a/wwwroot/downloads.html
+++ b/wwwroot/downloads.html
@@ -18,4 +18,6 @@
 <a href="unity/AppforMac.app.zip">Yacht/Mac用アプリはこちらから</a>
 <br>
 <a href="unity/GULLCAST0215.app.zip">Windsurfing/Mac用アプリはこちらから</a>
+<br>
+<a href="unity/GULLCAST0219.zip">Windsurfing/Mac用アプリはこちらから拡大版</a>
 </html>
