--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -91,6 +91,25 @@
       </div>
     </section>
 
+    <section class="wslab-section wslab-partner">
+      <div>
+        <img src="./img/logo_header_2019.png">
+        <h5 class="wslab-section-label">2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会 観戦アプリDLはこちら</h5>
+          <ul>
+            <li  style="display: inline-block;">
+            <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
+              <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" width="200" style="margin:15px 15px;" />
+            </a>
+            </li>
+            <li  style="display: inline-block;">
+              <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+                <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" width="230"  />
+              </a>
+            </li>
+          </ul>
+      </div>
+    </section>
+
 
 
     <section class="wslab-section wslab-partner">
@@ -293,24 +312,6 @@
         </h5>
       </div>
     </section>
-
-      <section class="wslab-section app-dl">
-        <div>
-          <h5 class="wslab-section-label">ANA ウインサーフィンワールドカップ横須賀大会観戦アプリDL</h5>
-            <ul>
-              <li  style="display: inline-block;">
-              <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
-                <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" width="200" style="margin:15px 15px;" />
-              </a>
-              </li>
-              <li  style="display: inline-block;">
-                <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
-                  <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" width="230"  />
-                </a>
-              </li>
-            </ul>
-        </div>
-      </section>
 
       <section class="wslab-section wslab-contact">
         <div class="wslab-form-wrapper">
